--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: 📂 Sync files
-        uses: EthanSheffield-deploy
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ethanbsheffnet@ethansheffield.com
           username: ${{ secrets.ftp_username }}
